--- a/message-producer/src/main/resources/application.yml
+++ b/message-producer/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     username: root
     password: root
     virtual-host: /
+    publisher-confirms: true #开启消息确认机制
+    publisher-returns: true #支持消息发送失败返回队列
+
+
