manual ack mode

--- a/message-consumer/src/main/resources/application.yml
+++ b/message-consumer/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
     username: root
     password: root
     virtual-host: /
+    listener:
+      simple:
+        acknowledge-mode: manual
+      direct:
+        acknowledge-mode: manual
