--- a/message-producer/pom.xml
+++ b/message-producer/pom.xml
@@ -2,19 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.heling</groupId>
         <artifactId>springboot-rabbitmq-practise</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.heling</groupId>
     <artifactId>message-producer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>message-producer</name>
-    <description>消息生产者</description>
+    <description>发送消息系统</description>
 
     <properties>
         <java.version>1.8</java.version>
