--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <groupId>com.heling</groupId>
     <artifactId>springboot-rabbitmq-practise</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <modules>
